// Vitest Snapshot v1

exports[`Slider > Slider baseVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="block"
  >
    <t-slider />
  </div>
  <div
    class="block"
  >
    <t-slider
      label="function () { [native code] }"
      range=""
      tooltipprops="[object Object]"
    />
  </div>
</div>
`;

exports[`Slider > Slider disabledVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="block"
  >
    <t-slider
      disabled=""
      show-tooltip="true"
    />
  </div>
  <div
    class="block"
  >
    <t-slider
      disabled=""
      range=""
      show-tooltip="true"
    />
  </div>
</div>
`;

exports[`Slider > Slider inputNumberVerticalVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="number-vertical-block"
  >
    <t-slider
      inputnumberprops="[object Object]"
      layout="vertical"
      show-tooltip="true"
    />
  </div>
  <div
    class="number-vertical-block"
  >
    <t-slider
      inputnumberprops="[object Object]"
      layout="vertical"
      range=""
      show-tooltip="true"
    />
  </div>
</div>
`;

exports[`Slider > Slider inputNumberVue demo works fine 1`] = `
<div>
  <div
    class="demo-slider"
  >
    <div
      class="block"
    >
      <t-slider
        inputnumberprops="[object Object]"
        show-tooltip="true"
      />
    </div>
    <div
      class="block"
    >
      <t-slider
        inputnumberprops="[object Object]"
        range=""
        show-tooltip="true"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > Slider marksVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="block"
  >
    <t-slider
      marks="[object Object]"
      show-tooltip="true"
    />
  </div>
  <div
    class="block"
  >
    <t-slider
      marks="[object Object]"
      range=""
      show-tooltip="true"
    />
  </div>
</div>
`;

exports[`Slider > Slider minAndMaxVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="block"
  >
    <t-slider
      marks="[object Object]"
      max="30"
      min="10"
      show-tooltip="true"
    />
  </div>
  <div
    class="block"
  >
    <t-slider
      marks="[object Object]"
      max="30"
      min="10"
      range=""
      show-tooltip="true"
    />
  </div>
</div>
`;

exports[`Slider > Slider stepVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="block"
  >
    <t-slider
      show-tooltip="true"
      step="4"
    />
  </div>
  <div
    class="block"
  >
    <t-slider
      range=""
      show-tooltip="true"
      step="4"
    />
  </div>
</div>
`;

exports[`Slider > Slider verticalMarksVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="vertical-marks-block"
  >
    <t-slider
      layout="vertical"
      marks="[object Object]"
      show-tooltip="true"
      vertical=""
    />
  </div>
  <div
    class="vertical-marks-block"
  >
    <t-slider
      layout="vertical"
      marks="[object Object]"
      range=""
      show-tooltip="true"
      vertical=""
    />
  </div>
</div>
`;

exports[`Slider > Slider verticalVue demo works fine 1`] = `
<div
  class="demo-slider"
>
  <div
    class="vertical-block"
  >
    <t-slider
      layout="vertical"
      show-tooltip="true"
    />
  </div>
  <div
    class="vertical-block"
  >
    <t-slider
      layout="vertical"
      range=""
      show-tooltip="true"
    />
  </div>
</div>
`;
